# to-do

./: .dockerignore  .env.example  .env.production  .env.production.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  _routes.json  docker-compose.yml  functions.config.toml  nginx.conf  package-lock.json  package.json  proxy-server.js  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build-docker.yml  docker.yml  tauri-build.yml  tauri.yml
cloudflare-worker/: .env.example  package-lock.json  package.json  wrangler.toml
cloudflare-worker/src/: index.ts
functions/: internal_routes.json
functions/api/: ai.ts
functions/api/ai/: [...path].ts
plugins/: ai-proxy-plugin.ts
src/: App.css  App.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/api/: llm.ts
src/components/: AIDecomposeModal.tsx  AddTodoInput.tsx  CategoryList.tsx  DeleteModal.tsx  EditModal.tsx  EmptyState.tsx  ErrorBoundary.tsx  MeetingPanel.tsx  Sidebar.tsx  SidebarNav.tsx  StatsBar.tsx  ThemeToggle.tsx  ToastContainer.tsx  TodoItem.tsx  TodoList.tsx  Topbar.tsx
src/css/: ai-modal.css  components.css  global.css  layout.css  todo.css  variables.css
src/hooks/: useAIDecomposition.ts  useAppState.tsx
src/utils/: aiApi.ts  helpers.ts  meetingParser.ts  storage.ts
