[package]
name = "todo-app"
version = "0.1.0"
description = "待办事项 - AI 智能拆解"
edition = "2021"
rust-version = "1.77"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
